@@ -198,9 +198,6 @@ public class AvroCoderTest {
     Object cloned1 = CoderUtils.clone(avroCoder1, pojo1);
     Object cloned2 = CoderUtils.clone(avroCoder2, pojo2);
 
-    Class<?> class1 = cloned1.getClass();
-    Class<?> class2 = cloned2.getClass();
-
     // Confirming that the uncorrupted coder is fine
     pojoClass1.cast(cloned1);
 
@@ -331,7 +328,7 @@ public class AvroCoderTest {
     Assert.assertEquals(before, after);
 
     Integer intAfter = intCoder.decode(inStream, context);
-    Assert.assertEquals(new Integer(10), intAfter);
+    Assert.assertEquals(Integer.valueOf(10), intAfter);
   }
 
   @Test
