@@ -21,13 +21,12 @@ import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.util.ArrayList;
 import java.util.List;
+import org.apache.beam.sdk.extensions.sql.impl.interpreter.BeamSqlExpressionEnvironment;
 import org.apache.beam.sdk.transforms.windowing.BoundedWindow;
 import org.apache.beam.sdk.values.Row;
 import org.apache.calcite.sql.type.SqlTypeName;
 
-/**
- * invoke a UDF function.
- */
+/** invoke a UDF function. */
 public class BeamSqlUdfExpression extends BeamSqlExpression {
   //as Method is not Serializable, need to keep class/method information, and rebuild it.
   private transient Method method;
@@ -36,8 +35,8 @@ public class BeamSqlUdfExpression extends BeamSqlExpression {
   private String methodName;
   private List<String> paraClassName = new ArrayList<>();
 
-  public BeamSqlUdfExpression(Method method, List<BeamSqlExpression> subExps,
-      SqlTypeName sqlTypeName) {
+  public BeamSqlUdfExpression(
+      Method method, List<BeamSqlExpression> subExps, SqlTypeName sqlTypeName) {
     super(subExps, sqlTypeName);
     this.method = method;
 
@@ -54,26 +53,25 @@ public class BeamSqlUdfExpression extends BeamSqlExpression {
   }
 
   @Override
-  public BeamSqlPrimitive evaluate(Row inputRow, BoundedWindow window) {
+  public BeamSqlPrimitive evaluate(
+      Row inputRow, BoundedWindow window, BeamSqlExpressionEnvironment env) {
     if (method == null) {
       reConstructMethod();
     }
     try {
       List<Object> paras = new ArrayList<>();
       for (BeamSqlExpression e : getOperands()) {
-        paras.add(e.evaluate(inputRow, window).getValue());
+        paras.add(e.evaluate(inputRow, window, env).getValue());
       }
 
-      return BeamSqlPrimitive.of(getOutputType(),
-          method.invoke(udfIns, paras.toArray(new Object[]{})));
+      return BeamSqlPrimitive.of(
+          getOutputType(), method.invoke(udfIns, paras.toArray(new Object[] {})));
     } catch (Exception ex) {
       throw new RuntimeException(ex);
     }
   }
 
-  /**
-   * re-construct method from class/method.
-   */
+  /** re-construct method from class/method. */
   private void reConstructMethod() {
     try {
       List<Class<?>> paraClass = new ArrayList<>();
@@ -82,11 +80,10 @@ public class BeamSqlUdfExpression extends BeamSqlExpression {
       }
       method = Class.forName(className).getMethod(methodName, paraClass.toArray(new Class<?>[] {}));
       if (!Modifier.isStatic(method.getModifiers())) {
-        udfIns = Class.forName(className).newInstance();
+        udfIns = Class.forName(className).getDeclaredConstructor().newInstance();
       }
     } catch (Exception e) {
       throw new RuntimeException(e);
     }
   }
-
 }
