@@ -23,6 +23,7 @@ import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.util.List;
+import org.apache.beam.sdk.annotations.Experimental;
 import org.apache.beam.sdk.coders.Coder.Context;
 import org.apache.beam.sdk.coders.ListCoder;
 
@@ -30,16 +31,17 @@ import org.apache.beam.sdk.coders.ListCoder;
 /**
  * A fake implementation of BigQuery's query service..
  */
-class FakeBigQueryServices implements BigQueryServices {
+@Experimental(Experimental.Kind.SOURCE_SINK)
+public class FakeBigQueryServices implements BigQueryServices {
   private JobService jobService;
   private FakeDatasetService datasetService;
 
-  FakeBigQueryServices withJobService(JobService jobService) {
+  public FakeBigQueryServices withJobService(JobService jobService) {
     this.jobService = jobService;
     return this;
   }
 
-  FakeBigQueryServices withDatasetService(FakeDatasetService datasetService) {
+  public FakeBigQueryServices withDatasetService(FakeDatasetService datasetService) {
     this.datasetService = datasetService;
     return this;
   }
@@ -76,7 +78,7 @@ class FakeBigQueryServices implements BigQueryServices {
   static TableRow convertNumbers(TableRow tableRow) {
     for (TableRow.Entry entry : tableRow.entrySet()) {
       if (entry.getValue() instanceof Integer) {
-        entry.setValue(new Long((Integer) entry.getValue()));
+        entry.setValue(Long.valueOf((Integer) entry.getValue()));
       }
     }
     return tableRow;
